# memory-mcp

./: .dockerignore  .helmignore  Chart.yaml  Dockerfile  README.md  pyproject.toml  values.yaml
.github/workflows/: build-image.yml
docs/: shared-semantic-memory.md
scripts/: orchestrator-connect.sh
src/memory_mcp/: __init__.py  __main__.py  core.py  document.py  embeddings.py  indexer.py  mcp_server.py  pgvector_store.py  semantic.py  server_semantic.py  storage.py  vector_store.py
templates/: _helpers.tpl  clone-token-externalsecret.yaml  deployment.yaml  embedder-tei.yaml  externalsecret.yaml  ghcr-pull-externalsecret.yaml  networkpolicy.yaml  postgres.yaml  reindex-cronjob.yaml
tests/: conftest.py  test_core.py  test_document.py  test_embeddings.py  test_indexer.py  test_indexer_cli.py  test_mcp_server.py  test_otel_wiring.py  test_pgvector_store.py  test_semantic.py  test_server_semantic.py  test_storage.py  test_vector_store.py
